--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Olga Ovcharenko"
+title                    : 
 title_separator          : "-"
 name                     : &name "Olga Ovcharenko"
 description              : &description "Graduate student st ETH Zurich"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://olgaovcharenko.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "OlgaOvcharenko/olgaovcharenko.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -88,6 +88,7 @@ author:
   pubmed           : 
   googlescholar    : 
   email            : "oovcharenko@student.ethz.ch"
+  personal_email   : "ovcharenko.folga@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
