--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Olga Ovcharenko"
-  avatar           : "st_pic.HEIC"
+  avatar           : "st_pic.png"
   bio              : "Graduate student at ETH Zurich"
   location         : "Zurich, Switzerland"
   employer         :
