--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "oovcharenko@student.ethz.ch"
+  email            : "oovcharenko[at]student.ethz.ch"
   personal_email   : "ovcharenko.folga@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
