--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "oovcharenko[at]student.ethz.ch"
-  personal_email   : "ovcharenko.folga@gmail.com"
+  email            : "ovcharenko.folga[at]gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
