Fix linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/olga-ovcharenko-a965491b3/"
+  linkedin         : "olga-ovcharenko-a965491b3"
   orcid            : 
   pinterest        :
   soundcloud       :
