--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         : "olga-ovcharenko-a965491b3"
-  orcid            : 
+  orcid            : "0009-0003-3676-482X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  bsky             : "oovcharenko.bsky.social"
 
 
 # Reading Files
