--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sapar Charyyev"
-  avatar           : 
+  avatar           : "photo.jpg"
   bio              : "Graduate student at ETH Zurich"
   location         : "Zurich, Switzerland"
   employer         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sapar-charyyev/"
+  linkedin         : "sapar-charyyev/"
   orcid            : 
   pinterest        :
   soundcloud       :
