--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sapar Charyyev"
-  avatar           : "photo.jpg"
+  avatar           : "profile.png"
   bio              : "Graduate student at ETH Zurich"
   location         : "Zurich, Switzerland"
   employer         :
